Plugin Name: Custom Sidebars Pro
Author: Javier Marquez (Incsub), Philipp Stracker (Incsub), Marcin Pietrzak (Incsub)
Buildtime: BUILDTIME

Change Log:
----------------------------------------------------------------------

3.0.8 ( 2017-xx-xx )

3.0.7.1 ( 2017-05-25 )
- Fixed visibility of Custom Explain - now it is visible only for administrators.

3.0.7 ( 2017-05-25 )
- Added ability to replace sidebars for category archive.
- Added ability to replace sidebars for custom taxonomy archive.
- Added ability to turn on Custom Sidebars Explain mode from Admin Bar.
- Fixed a replacement problem on 404 pages.
- Improved "Sidebar Location" popup - added a message when we do not have any replaceable sidebar.
- Refactored "Column Sidebars" on post list screen.

3.0.6 ( 2017-05-11 )
- Added width to "Custom Sidebars" column on entries list screen to avoid uncontrolled column width.
- Added ability to add new sidebar using the only keyboard, after you fill name just push enter to move to the description field. Hit enter on description field to add a new sidebar.
- Fixed "WPMUDEV Frash" message for pro version.

3.0.5 ( 2017-04-25 )
- Improved columns display on post list screen - now "Custom Sidebars" column is hidden by default.
- Prevent to load assets on front-end.
- Updated "WPMU Dev code library" to version 3.0.4.
- Fixed a CSS glitch on media library.
- Fixed a JavaScript conflicting with CiviCRM plugin.
- Fixed a problem with taxonomies.

3.0.4 ( 2017-04-11 )
- Improved "Create a custom sidebar to get started." box.
- Upgraded "WPMU Dev code library" to version 3.0.3.
- Fixed a problem with empty taxonomies, now we can see all taxonomies, including empty.
- Fixed fetching posts.
- Fixed a problem on the Customizer page - removed clone option.
- Fixed Widgets Screen for Right to Left languages.

3.0.3 ( 2017-03-22 )
- Removed WP Checkup banner.

3.0.2 ( 2017-03-21 )
- Fixed compatibility issue with uBlock Origin and AdBlock Plus.